@@ -1,1 +1,1 @@
-#define SERIALNUM "19990626_19"
+#define SERIALNUM "19990626_20"
